<resources>
    <string name="app_name">ChatBot App</string>
    <string name="need_help">Need Help?</string>
    <string name="helpdesk_center">Helpdesk Center</string>
    <string name="tell_us">Tell us how we can help</string>
    <string name="our_crew"><![CDATA[Our crew of superheroes are standing by\nfor services & support!]]></string>
    <string name="chat">Chat</string>
    <string name="start_a_conversation_now">Start a conversation now!</string>
    <string name="type_a_message">Type a message…</string>
    <string name="july_maria">July Maria</string>
    <string name="july_maria_joined_the_conversation">July Maria joined the conversation</string>
    <string name="faqs">FAQs</string>
    <string name="find_intelligent">Find intelligent answer instantly!</string>
    <string name="online">Online</string>
    <string name="_24_7">24/7</string>
    <string name="end_conversation">End Conversation</string>
    <string name="end_conversation_question">Are you sure you want to end the conversation?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
</resources>